fix(arch): install npm

--- a/setup/roles/arch/node/tasks/main.yml
+++ b/setup/roles/arch/node/tasks/main.yml
@@ -1,7 +1,9 @@
 - name: Install Node.js
   become: true
   community.general.pacman:
-    name: nodejs
+    name:
+      - nodejs
+      - npm
     state: present
 
 - name: Install Yarn
