fix(arch): don't add user to group tss which may not exist

--- a/setup/roles/arch/user/tasks/main.yml
+++ b/setup/roles/arch/user/tasks/main.yml
@@ -2,7 +2,7 @@
   become: true
   user:
     name: "{{ main_user }}"
-    groups: wheel,wireshark,docker,tss,libvirt,lp,kvm
+    groups: wheel,wireshark,docker,libvirt,lp,kvm
     append: true
     shell: /bin/zsh
 
