refactor(arch): provide user groups as an array

--- a/setup/roles/arch/user/tasks/main.yml
+++ b/setup/roles/arch/user/tasks/main.yml
@@ -2,7 +2,13 @@
   become: true
   user:
     name: "{{ main_user }}"
-    groups: wheel,wireshark,docker,libvirt,lp,kvm
+    groups:
+      - wheel
+      - wireshark
+      - docker
+      - libvirt
+      - lp
+      - kvm
     append: true
     shell: /bin/zsh
 
