--- a/setup/roles/arch/docker/tasks/main.yml
+++ b/setup/roles/arch/docker/tasks/main.yml
@@ -1,5 +1,7 @@
 - name: Install Docker
   become: true
   community.general.pacman:
-    name: docker
+    name:
+      - docker
+      - docker-compose
     state: present
