feat(arch): add vim support and config

--- a/setup/arch.yml
+++ b/setup/arch.yml
@@ -11,6 +11,7 @@
     - arch/code
     - arch/gui-utils
     - arch/kvm-guest
+    - arch/vim
     - arch/user
     - arch/gnome-terminal
     - arch/fonts
