feat(arch): install Dracula for GNOME Terminal

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -2,3 +2,9 @@
     type = "file"
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     refreshPeriod = "168h"
+["opt/dracula-gnome-terminal"]
+    type = "archive"
+    url = "https://github.com/dracula/gnome-terminal/archive/master.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
