--- a/setup/roles/arch/gnome-terminal/tasks/main.yml
+++ b/setup/roles/arch/gnome-terminal/tasks/main.yml
@@ -6,3 +6,6 @@
   ansible.builtin.shell: |
     gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ gnome_terminal_profile.stdout }}/ font 'MonoLisa 11'
     gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ gnome_terminal_profile.stdout }}/ use-system-font false
+
+- name: Install Dracula GNOME Terminal theme
+  ansible.builtin.shell: $HOME/opt/dracula-gnome-terminal/install.sh --profile Default --scheme Dracula --skip-dircolors
