feat(arch): enable git.autofetch setting in Code

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -57,5 +57,6 @@
   "docker.showStartPage": false,
   "editor.tabSize": 2,
   "prettier.requireConfig": true,
-  "redhat.telemetry.enabled": false
+  "redhat.telemetry.enabled": false,
+  "git.autofetch": true
 }
