--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -8,3 +8,7 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+[".local/share/gedit/styles/dracula.xml"]
+    type = "file"
+    url = "https://raw.githubusercontent.com/dracula/gedit/master/dracula.xml"
+    refreshPeriod = "168h"
