--- a/setup/roles/arch/gnome/tasks/main.yml
+++ b/setup/roles/arch/gnome/tasks/main.yml
@@ -6,3 +6,6 @@
 
 - name: Lock system five seconds after screensaver triggers
   command: gsettings set org.gnome.desktop.screensaver lock-delay 5
+
+- name: Set gedit theme to Dracula
+  command: gsettings set org.gnome.gedit.preferences.editor scheme 'dracula'
