--- a/setup/roles/arch/fonts/tasks/main.yml
+++ b/setup/roles/arch/fonts/tasks/main.yml
@@ -13,6 +13,13 @@
       - powerline-fonts
     state: present
 
+- name: Installing fonts (AUR)
+  become: true
+  become_user: aur_builder
+  kewlfft.aur.aur:
+    name: ttf-meslo-nerd-font-powerlevel10k
+    use: yay
+
 - name: update font-cache
   become: true
   command: fc-cache -fv
