--- a/setup/roles/arch/gnome/tasks/main.yml
+++ b/setup/roles/arch/gnome/tasks/main.yml
@@ -9,3 +9,6 @@
 
 - name: Set gedit theme to Dracula
   command: gsettings set org.gnome.gedit.preferences.editor scheme 'dracula'
+
+- name: Set monospace font to MonoLisa
+  command: gsettings set org.gnome.desktop.interface monospace-font-name 'MonoLisa 10'
