--- a/setup/roles/arch/gnome/tasks/main.yml
+++ b/setup/roles/arch/gnome/tasks/main.yml
@@ -1,5 +1,7 @@
-- name: Set GTK theme
-  command: gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"
+- name: Set GTK theme to Dracula
+  ansible.builtin.shell: |
+    gsettings set org.gnome.desktop.interface gtk-theme "Dracula"
+    gsettings set org.gnome.desktop.wm.preferences theme "Dracula"
 
 - name: Map CAPSLOCK to ESC
   command: gsettings set org.gnome.desktop.input-sources xkb-options "['caps:swapescape','lv3:ralt_switch']"
