feat(arch): skip confirmation on git sync

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -58,5 +58,6 @@
   "editor.tabSize": 2,
   "prettier.requireConfig": true,
   "redhat.telemetry.enabled": false,
-  "git.autofetch": true
+  "git.autofetch": true,
+  "git.confirmSync": false
 }
