feat(arch): don't start Docker on boot

--- a/setup/roles/arch/docker/tasks/main.yml
+++ b/setup/roles/arch/docker/tasks/main.yml
@@ -5,3 +5,9 @@
       - docker
       - docker-compose
     state: present
+
+# Not recommended to launch Docker on boot for desktop systems
+# See: https://github.com/moby/moby/issues/38373
+- name: Disable Docker service on boot
+  become: true
+  command: systemctl disable docker.service
