feat(arch): disable gnome-keyring-ssh

--- a/setup/roles/arch/gnome/tasks/main.yml
+++ b/setup/roles/arch/gnome/tasks/main.yml
@@ -14,3 +14,11 @@
 
 - name: Set monospace font to MonoLisa
   command: gsettings set org.gnome.desktop.interface monospace-font-name 'MonoLisa 10'
+
+- name: Disable gnome-keyring-ssh
+  shell: |
+    echo 'X-GNOME-Autostart-enabled=false' \
+      | cat /etc/xdg/autostart/gnome-keyring-ssh.desktop - \
+      >> ~/.config/autostart/gnome-keyring-ssh.desktop
+  args:
+    creates: ~/.config/autostart/gnome-keyring-ssh.desktop
