feat(arch): explicitly enable Docker socket

--- a/setup/roles/arch/docker/tasks/main.yml
+++ b/setup/roles/arch/docker/tasks/main.yml
@@ -8,6 +8,8 @@
 
 # Not recommended to launch Docker on boot for desktop systems
 # See: https://github.com/moby/moby/issues/38373
-- name: Disable Docker service on boot
+- name: Enable Docker socket
   become: true
-  command: systemctl disable docker.service
+  shell: |
+    systemctl disable docker.service
+    systemctl enable docker.socket
