--- a/setup/roles/arch/gnome/tasks/main.yml
+++ b/setup/roles/arch/gnome/tasks/main.yml
@@ -4,7 +4,7 @@
     gsettings set org.gnome.desktop.wm.preferences theme "Dracula"
 
 - name: Map CAPSLOCK to ESC
-  command: gsettings set org.gnome.desktop.input-sources xkb-options "['caps:swapescape','lv3:ralt_switch']"
+  command: gsettings set org.gnome.desktop.input-sources xkb-options "['caps:escape_shifted_capslock','lv3:ralt_switch']"
 
 - name: Lock system five seconds after screensaver triggers
   command: gsettings set org.gnome.desktop.screensaver lock-delay 5
