feat(setup): add some flatpak'd communication apps

--- a/setup/roles/arch/flatpak/tasks/main.yml
+++ b/setup/roles/arch/flatpak/tasks/main.yml
@@ -14,3 +14,26 @@
   community.general.flatpak:
     name: com.spotify.Client
     state: present
+
+- name: Install Signal from Flathub
+  community.general.flatpak:
+    name: org.signal.Signal
+    state: present
+
+- name: Install Discord from Flathub
+  community.general.flatpak:
+    name: com.discordapp.Discord
+    state: present
+
+- name: Install Slack from Flathub
+  community.general.flatpak:
+    name: com.slack.Slack
+    state: present
+
+- name: Install Zoom from Flathub
+  community.general.flatpak:
+    name: us.zoom.Zoom
+    state: present
+
+
+
