feat(code): add bracket pair colorization

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -59,5 +59,7 @@
   "prettier.requireConfig": true,
   "redhat.telemetry.enabled": false,
   "git.autofetch": true,
-  "git.confirmSync": false
+  "git.confirmSync": false,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": "active"
 }
