feat(arch): enable automatic screen brightness

--- a/setup/roles/arch/gui-utils/tasks/main.yml
+++ b/setup/roles/arch/gui-utils/tasks/main.yml
@@ -6,5 +6,7 @@
       - wireshark-qt
       - gimp
       - inkscape
+      # Enable automatic screen brightness
+      - iio-sensor-proxy
     state: present
 
