feat(code): don't import react at the top of files

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -61,5 +61,6 @@
   "git.autofetch": true,
   "git.confirmSync": false,
   "editor.bracketPairColorization.enabled": true,
-  "editor.guides.bracketPairs": "active"
+  "editor.guides.bracketPairs": "active",
+  "reactSnippets.settings.importReactOnTop": false
 }
