feat(arch): add virtual surround via pipewire

--- a/setup/roles/arch/gui-utils/tasks/main.yml
+++ b/setup/roles/arch/gui-utils/tasks/main.yml
@@ -9,5 +9,9 @@
       # Enable automatic screen brightness
       - iio-sensor-proxy
       - mesa-utils
+      - pipewire
+      - pipewire-pulse
+      - pipewire-jack
+      - wireplumber
     state: present
 
