--- a/setup/roles/arch/docker/tasks/main.yml
+++ b/setup/roles/arch/docker/tasks/main.yml
@@ -4,6 +4,7 @@
     name:
       - docker
       - docker-compose
+      - kubectl
     state: present
 
 # Not recommended to launch Docker on boot for desktop systems
