--- a/setup/roles/arch/git/tasks/main.yml
+++ b/setup/roles/arch/git/tasks/main.yml
@@ -8,8 +8,9 @@
   ansible.builtin.shell: |
     git config --global push.default simple
     git config --global alias.up 'pull --rebase --autostash'
-    git config --global diff.tool meld
-    git config --global merge.tool meld
-    git config --global mergetool.meld.cmd "/usr/sbin/meld \"\$LOCAL\" \"\$MERGED\" \"\$REMOTE\" --output \"\$MERGED\""
+    git config --global diff.tool vscode
+    git config --global difftool.vscode.cmd "code --wait --diff \$LOCAL \$REMOTE"
+    git config --global merge.tool vscode
+    git config --global mergetool.vscode.cmd "code --wait \$MERGED"
     git config --global mergetool.keepBackup false
     git config --global init.defaultBranch main
