--- a/setup/arch.yml
+++ b/setup/arch.yml
@@ -1,30 +1,25 @@
 - hosts: all
-  vars:
-    main_user: "{{ ansible_user_id }}"
   roles:
-    - arch/git
     - arch/yay
     - arch/cli-utils
-    - arch/node-utils
-    - arch/zsh
-    - arch/vim
-    - arch/user
 
 - hosts: gui
   roles:
-    - arch/gui-utils
+    - arch/gui
     - arch/kvm-guest
-    - arch/gnome-terminal
-    - arch/fonts
     - arch/gnome
     - arch/flatpak
 
 - hosts: dev
   roles:
-    - arch/docker
-    - arch/go
-    - arch/node
+    - arch/dev-cli
 
 - hosts: dev:&gui
   roles:
-    - arch/code
+    - arch/dev-gui
+
+- hosts: all
+  vars:
+    main_user: "{{ ansible_user_id }}"
+  roles:
+    - arch/user
