--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -10,16 +10,53 @@
       - npm
       - go
 
-- name: Configure git
-  ansible.builtin.shell: |
-    git config --global push.default simple
-    git config --global alias.up 'pull --rebase --autostash'
-    git config --global diff.tool vscode
-    git config --global difftool.vscode.cmd "code --wait --diff \$LOCAL \$REMOTE"
-    git config --global merge.tool vscode
-    git config --global mergetool.vscode.cmd "code --wait \$MERGED"
-    git config --global mergetool.keepBackup false
-    git config --global init.defaultBranch main
+- name: Configure git - default push action
+  community.general.git_config:
+    name: push.default
+    scope: global
+    value: simple
+
+- name: Configure git - 'git up' alias
+  community.general.git_config:
+    name: alias.up
+    scope: global
+    value: 'pull --rebase --autostash'
+
+- name: Configure git - set VS Code as diff tool
+  community.general.git_config:
+    name: diff.tool
+    scope: global
+    value: vscode
+
+- name: Configure git - diff command
+  community.general.git_config:
+    name: difftool.vscode.cmd
+    scope: global
+    value: "code --wait --diff $LOCAL $REMOTE"
+
+- name: Configure git - set VS Code as merge tool
+  community.general.git_config:
+    name: merge.tool
+    scope: global
+    value: vscode
+
+- name: Configure git - merge command
+  community.general.git_config:
+    name: mergetool.vscode.cmd
+    scope: global
+    value: "code --wait $MERGED"
+
+- name: Configure git - automatically clean up backups
+  community.general.git_config:
+    name: mergetool.keepBackup
+    scope: global
+    value: 
+
+- name: Configure git - default branch 'main'
+  community.general.git_config:
+    name: init.defaultBranch
+    scope: global
+    value: main
 
 - name: Install Yarn
   become: true
