feat(arch): use rebase to reconcile git pull

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -16,6 +16,12 @@
     scope: global
     value: simple
 
+- name: Configure git - rebase to reconcile pulls
+  community.general.git_config:
+    name: pull.rebase
+    scope: global
+    value: true
+
 - name: Configure git - 'git up' alias
   community.general.git_config:
     name: alias.up
