feat(arch): install nvm

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -64,6 +64,14 @@
     scope: global
     value: main
 
+- name: Install Node CLI utilities - nvm
+  become: true
+  become_user: aur_builder
+  kewlfft.aur.aur:
+    name: nvm
+    use: makepkg
+    state: present
+
 - name: Install Node CLI utilities - yarn
   become: true
   community.general.npm:
