--- a/setup/roles/arch/dev-gui/tasks/main.yml
+++ b/setup/roles/arch/dev-gui/tasks/main.yml
@@ -5,3 +5,33 @@
     name: visual-studio-code-bin
     use: makepkg
     state: present
+
+- name: Configure git - set VS Code as editor
+  community.general.git_config:
+    name: core.editor
+    scope: global
+    value: "code --wait"
+
+- name: Configure git - set VS Code as diff tool
+  community.general.git_config:
+    name: diff.tool
+    scope: global
+    value: vscode
+
+- name: Configure git - diff command
+  community.general.git_config:
+    name: difftool.vscode.cmd
+    scope: global
+    value: "code --wait --diff $LOCAL $REMOTE"
+
+- name: Configure git - set VS Code as merge tool
+  community.general.git_config:
+    name: merge.tool
+    scope: global
+    value: vscode
+
+- name: Configure git - merge command
+  community.general.git_config:
+    name: mergetool.vscode.cmd
+    scope: global
+    value: "code --wait $MERGED"
