--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -63,5 +63,9 @@
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": "active",
   "reactSnippets.settings.importReactOnTop": false,
-  "editor.inlineSuggest.enabled": true
+  "editor.inlineSuggest.enabled": true,
+  "gitlens.currentLine.enabled": false,
+  "gitlens.hovers.currentLine.over": "line",
+  "gitlens.codeLens.enabled": false,
+  "gitlens.showWelcomeOnInstall": false
 }
