feat(arch): enable git rebase autosquash

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -22,6 +22,12 @@
     scope: global
     value: true
 
+- name: Configure git - enable autosquash
+  community.general.git_config:
+    name: rebase.autoSquash
+    scope: global
+    value: true
+
 - name: Configure git - 'git up' alias
   community.general.git_config:
     name: alias.up
