feat(arch): install man-db for dev machines

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -9,6 +9,7 @@
       - nodejs
       - npm
       - go
+      - man-db
 
 - name: Configure git - default push action
   community.general.git_config:
